# ChaosHeadNoahCHS_Helper

./: .gitignore  README.md  xmake.lua
lib/: dbghelp.def  dllmain.cpp
rust-ver/: Cargo.toml  build.rs
rust-ver/lib/: exports_def.hbs  exports_rs.hbs
rust-ver/src/: lib.rs
src/: lib.cpp
