[package]
name = "dbghelp"
version = "0.1.0"
edition = "2021"


[lib]
name = "dbghelp"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
env_logger = "0.11.5"
handlebars = "6.1.0"
log = "0.4.22"
minhook = "0.6.0"
windows = { version = "0.58.0", features = ["Win32", "Win32_Security", "Win32_System", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
anyhow = "1.0.89"
exe = "0.5.6"
handlebars = "6.1.0"
serde_json = "1.0.128"
